<resources>
    <string name="app_name">WeatherApp</string>
    <string name="search_box_hint">Location</string>
    <string name="favorite_icon">favorites</string>
    <string name="sun_rise">Sun Rise:</string>
    <string name="sun_set">Sun Set:</string>
    <string name="temperature_min">Temp. Min.:</string>
    <string name="temperature_max">Temp. Max.:</string>
    <string name="hour_of_sun">Hour of Sun:</string>
    <string name="wind_speed">Wind Speed:</string>
</resources>