<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/forecast_list_item_height"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:background="@drawable/forecast_rounded">

    <TextView
        android:id="@+id/dateView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateView" />

    <TextView
        android:id="@+id/temperatureView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameView" />

    <TextView
        android:id="@+id/sunRiseView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/sunRiseTagView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sunRiseTagView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/sun_rise"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/windSpeedTagView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sunSetView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/sunSetTagView"
        app:layout_constraintTop_toBottomOf="@+id/sunRiseView" />

    <TextView
        android:id="@+id/sunSetTagView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/sun_set"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/windSpeedTagView"
        app:layout_constraintTop_toBottomOf="@+id/sunRiseTagView" />

    <TextView
        android:id="@+id/temperatureMinView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/temperatureMinTagView"
        app:layout_constraintTop_toBottomOf="@+id/sunSetView" />

    <TextView
        android:id="@+id/temperatureMinTagView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/temperature_min"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/windSpeedTagView"
        app:layout_constraintTop_toBottomOf="@+id/sunSetTagView" />

    <TextView
        android:id="@+id/temperatureMaxView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/temperatureMaxTagView"
        app:layout_constraintTop_toBottomOf="@+id/temperatureMinView" />

    <TextView
        android:id="@+id/temperatureMaxTagView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/temperature_max"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/windSpeedTagView"
        app:layout_constraintTop_toBottomOf="@+id/temperatureMinTagView" />

    <TextView
        android:id="@+id/hourOfSunView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/hourOfSunTagView"
        app:layout_constraintTop_toBottomOf="@+id/temperatureMaxView" />

    <TextView
        android:id="@+id/hourOfSunTagView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/hour_of_sun"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/windSpeedTagView"
        app:layout_constraintTop_toBottomOf="@+id/temperatureMaxTagView" />

    <TextView
        android:id="@+id/windSpeedView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hourOfSunView" />

    <TextView
        android:id="@+id/windSpeedTagView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/wind_speed"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/windSpeedView"
        app:layout_constraintTop_toBottomOf="@+id/hourOfSunTagView" />

    <TextView
        android:id="@+id/descriptionView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:maxLines="4"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/windSpeedTagView" />

</androidx.constraintlayout.widget.ConstraintLayout>